tests/NormalTests/paczka1/fuzzy1/76066815.err
Error in line 14: js965T S808 93,4
Error in line 8: ua8xx S405 815,5
Error in line 12: LT7rHz9 S808 53,1
Error in line 29: FZjH A912 44,0
Error in line 35: ua8xx S405 10,0
Error in line 37: ua8xx A912 18,2
